[gd_scene load_steps=12 format=3 uid="uid://b15eef6fao6nk"]

[ext_resource type="Script" uid="uid://dinv8o6f1ludi" path="res://addons/handy_nodes/components/simple_color_picker/simple_color_picker.gd" id="1_miqdv"]
[ext_resource type="Shader" uid="uid://cq4kby8epqdpm" path="res://addons/handy_nodes/components/simple_color_picker/resource/sv_bar.gdshader" id="2_q4vep"]
[ext_resource type="Script" uid="uid://b3be8hn7asdcv" path="res://addons/handy_nodes/components/simple_color_picker/tracer.gd" id="3_ibwdk"]
[ext_resource type="Shader" uid="uid://bg8wmqoixn0fu" path="res://addons/handy_nodes/components/simple_color_picker/resource/hue_bar.gdshader" id="3_nyo1t"]
[ext_resource type="FontFile" uid="uid://b11kiy70re55p" path="res://assets/fonts/NotoSansSC/NotoSansSC-Bold.ttf" id="4_5lqg6"]
[ext_resource type="Shader" uid="uid://c1gf6eu1kk2n7" path="res://addons/handy_nodes/components/simple_color_picker/resource/transparent_bar.gdshader" id="4_a5ldj"]
[ext_resource type="Texture2D" uid="uid://c0ouqly5c1e6y" path="res://assets/images/Checkerboard_48.svg" id="5_qkw3p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ljmh"]
shader = ExtResource("3_nyo1t")
shader_parameter/x_dir = 0.0
shader_parameter/saturation = 1.0
shader_parameter/value = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dhy6q"]
shader = ExtResource("2_q4vep")
shader_parameter/h = 1.0
shader_parameter/s = 1.0
shader_parameter/v = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qkw3p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y52tk"]
shader = ExtResource("4_a5ldj")

[node name="SimpleColorPicker" type="VBoxContainer"]
custom_minimum_size = Vector2(600, 456)
offset_right = 600.0
offset_bottom = 456.0
theme_override_constants/separation = 24
script = ExtResource("1_miqdv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="HueRect" type="ColorRect" parent="HBoxContainer"]
material = SubResource("ShaderMaterial_7ljmh")
custom_minimum_size = Vector2(96, 0)
layout_mode = 2

[node name="HueTracer" type="Control" parent="HBoxContainer/HueRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ibwdk")
shape = 3
fill_color = Color(1, 1, 1, 0)
width = 16
border = 4

[node name="HLabel" type="Label" parent="HBoxContainer/HueRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.0546875, 0.0546875, 0.0546875, 1)
theme_override_colors/font_outline_color = Color(0.945313, 0.945313, 0.945313, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("4_5lqg6")
theme_override_font_sizes/font_size = 32
text = "H 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SVRect" type="ColorRect" parent="HBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_dhy6q")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SVTracer" type="Control" parent="HBoxContainer/SVRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ibwdk")
shape = 1
fill_color = Color(1, 1, 1, 0)
width = 16
border = 4

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qkw3p")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="FinalColor" type="ColorRect" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
color = Color(1, 1, 1, 0.67451)

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/HBoxContainer/FinalColor"]
show_behind_parent = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_qkw3p")
expand_mode = 1

[node name="AlphaRect" type="ColorRect" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_y52tk")
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/AlphaRect"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_qkw3p")
expand_mode = 1
stretch_mode = 1

[node name="AlphaTracer" type="Control" parent="PanelContainer/HBoxContainer/AlphaRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ibwdk")
shape = 2
fill_color = Color(1, 1, 1, 0)
width = 16
border = 4

[node name="ALabel" type="Label" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.0546875, 0.0546875, 0.0546875, 1)
theme_override_colors/font_outline_color = Color(0.945313, 0.945313, 0.945313, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("4_5lqg6")
theme_override_font_sizes/font_size = 32
text = "A 255"
horizontal_alignment = 1
vertical_alignment = 1
